pre-call update

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -83,6 +83,10 @@ img {
   background-color: $agents-background;
 }
 
+.light-blue {
+  background-color: $light-blue;
+}
+
 .white {
   background-color: #fff;
 }
