--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -11,6 +11,16 @@ header {
 	&.nav-down {
 		background-color: rgba(white,.98);
 	}
+	&.no-border {
+		border-bottom: none;
+		padding-bottom: 1px;
+		nav a {
+			padding-bottom: 24px;
+			&.btn-contact {
+				padding-bottom: 10px;
+			}
+		}
+	}
 	width: 100%;
 	@include clearfix;
 	.flex {
@@ -74,7 +84,7 @@ nav {
 		ul li {
 			@include gallery(1 of 4 no-gutter);
 			border-radius: 0;
-			border-right: 1px solid $dark-gray;
+			border-right: 1px solid white;
 			background-color: #CCCCCC;
 			a {
 				display:block;
@@ -89,7 +99,7 @@ nav {
 				}
 				&:hover {
 					box-shadow: none;
-					background-color: darken(#CCCCCC, 10%);
+					background-color: darken(#CCCCCC,13%);
 				}
 			}
 			&.active {
@@ -97,12 +107,21 @@ nav {
 				a {
 					box-shadow: none;
 					&:hover {
-						background-color: lighten($text-green,2%);
+						background-color: lighten($text-green,3%);
 					}
 				}
 			}
 		}
 	}
+}
+
+.nav-tabs > li > a:hover {
+	border-color: transparent; 
+}
+
+.nav > li > a:focus {
+	text-decoration: none;
+	background-color: inherit; 
 }
 
 .secondary-nav-link {
