--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -45,6 +45,8 @@
 @import 'modules/_neighborhood_tiles.scss';
 @import 'modules/_insight_tile.scss';
 @import 'modules/_agents_tile.scss';
+@import 'modules/_quotes.scss';
+@import 'modules/_service_lists.scss';
 
 // pages
 // @import 'pages/_landing.scss';
