--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -1204,6 +1204,13 @@ th {
   font-style: normal; }
 
 @font-face {
+  font-family: 'Copernicus-Bold';
+  src: url("../fonts/Copernicus-Bold.eot");
+  src: url("../fonts/Copernicus-Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/Copernicus-Bold.woff") format("woff");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
   font-family: 'Copernicus-Semibold';
   src: url("../fonts/Copernicus-Semibold.eot");
   src: url("../fonts/Copernicus-Semibold.eot?#iefix") format("embedded-opentype"), url("../fonts/Copernicus-Semibold.woff") format("woff");
@@ -1430,6 +1437,38 @@ head:hover ~ body .container:before {
   margin-right: -100%;
   clear: none; }
 
+section.services .container {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between; }
+
+section.services main {
+  box-sizing: border-box;
+  width: 75%;
+  float: left;
+  padding-left: 0.83333%;
+  padding-right: 0.83333%; }
+
+section.services main * {
+  box-sizing: border-box;
+  width: 66.66667%;
+  float: left;
+  padding-left: 0.83333%;
+  padding-right: 0.83333%; }
+
+section.services aside {
+  box-sizing: border-box;
+  width: 25%;
+  float: right;
+  padding-left: 0.83333%;
+  padding-right: 0.83333%; }
+
 aside {
   box-sizing: border-box;
   width: 320px;
@@ -1507,6 +1546,9 @@ img {
 
 .agents-background {
   background-color: #F5F5F5; }
+
+.light-blue {
+  background-color: #E6F1FA; }
 
 .white {
   background-color: #fff; }
@@ -4387,6 +4429,16 @@ header {
 header.nav-down {
   background-color: rgba(255, 255, 255, 0.98); }
 
+header.no-border {
+  border-bottom: none;
+  padding-bottom: 1px; }
+
+header.no-border nav a {
+  padding-bottom: 24px; }
+
+header.no-border nav a.btn-contact {
+  padding-bottom: 10px; }
+
 header:before, header:after {
   content: "";
   display: table;
@@ -4463,7 +4515,7 @@ nav#secondary-nav ul li {
   width: 25%;
   float: left;
   border-radius: 0;
-  border-right: 1px solid #25282A;
+  border-right: 1px solid white;
   background-color: #CCCCCC; }
 
 nav#secondary-nav ul li:nth-child(4n + 1) {
@@ -4500,7 +4552,7 @@ nav#secondary-nav ul li a:last-of-type {
 
 nav#secondary-nav ul li a:hover {
   box-shadow: none;
-  background-color: #b3b3b3; }
+  background-color: #ababab; }
 
 nav#secondary-nav ul li.active {
   background-color: #009B77; }
@@ -4509,7 +4561,14 @@ nav#secondary-nav ul li.active a {
   box-shadow: none; }
 
 nav#secondary-nav ul li.active a:hover {
-  background-color: #00a57f; }
+  background-color: #00aa83; }
+
+.nav-tabs > li > a:hover {
+  border-color: transparent; }
+
+.nav > li > a:focus {
+  text-decoration: none;
+  background-color: inherit; }
 
 .secondary-nav-link {
   display: block !important;
@@ -4598,6 +4657,10 @@ footer .footer-divider p {
   height: 220px;
   width: 150px; }
 
+.neighborhood #map {
+  width: 100%;
+  height: 800px; }
+
 .leading {
   margin-top: 78px; }
 
@@ -4610,6 +4673,25 @@ section.properties {
 
 section.leading {
   margin-top: 78px; }
+
+section.services h2, section.services h3 {
+  text-align: left;
+  font-size: 34px;
+  line-height: 50px;
+  text-transform: none;
+  margin: 0; }
+
+section.services h2 {
+  font-family: "Copernicus-Semibold"; }
+
+section.services h3 {
+  font-family: "Copernicus-BookItalic"; }
+
+.content h3 {
+  text-transform: uppercase;
+  font-size: 17px;
+  font-family: Arial, "Lucida Grande", sans-serif;
+  text-align: center; }
 
 .light-gray-bg {
   background-color: #ECEBEC; }
@@ -4646,10 +4728,6 @@ section.leading {
 
 .circle-leader .circle svg * {
   fill: #404041; }
-
-h3 {
-  font-family: Arial, "Lucida Grande", sans-serif;
-  font-size: 17px; }
 
 .Select {
   border: 1px solid transparent; }
@@ -5239,14 +5317,53 @@ h3 {
   display: table;
   clear: both; }
 
-.agent-individual main .recent-transactions div {
-  border-top: 1px solid #25282A; }
+.agent-individual main .recent-transactions {
+  box-sizing: border-box;
+  width: 100%;
+  float: left; }
+
+.agent-individual main .recent-transactions:before, .agent-individual main .recent-transactions:after {
+  content: "";
+  display: table;
+  clear: both; }
+
+.agent-individual main .recent-transactions h1 {
+  margin-bottom: 30px; }
+
+.agent-individual main .recent-transactions ul {
+  border-bottom: 1px solid #a1a8ad; }
+
+.agent-individual main .recent-transactions ul:before, .agent-individual main .recent-transactions ul:after {
+  content: "";
+  display: table;
+  clear: both; }
+
+.agent-individual main .recent-transactions h3 {
+  font-family: "Copernicus-Bold";
+  font-size: 16px; }
 
 .agent-individual main .recent-transactions li {
-  padding: 20px 0; }
+  box-sizing: border-box;
+  width: 50%;
+  float: left;
+  padding-left: 5%;
+  padding-right: 5%;
+  padding: 20px 0;
+  font-family: "Copernicus-Medium";
+  font-size: 16px; }
 
-.agent-individual main .recent-transactions ul li:last-of-type {
-  float: right; }
+.agent-individual main .recent-transactions li:nth-child(2n + 1) {
+  margin-left: 0;
+  margin-right: -100%;
+  clear: both; }
+
+.agent-individual main .recent-transactions li:nth-child(2n + 2) {
+  margin-left: 50%;
+  margin-right: -100%;
+  clear: none; }
+
+.agent-individual main .recent-transactions li:nth-child(2n + 2) {
+  text-align: right; }
 
 .green-specs {
   padding: 30px;
@@ -5921,3 +6038,41 @@ h3 {
 
 .agents .grid-3-constrained p {
   margin-bottom: 10px; }
+
+.quote, .person, .description {
+  text-align: center; }
+
+.person, .description {
+  font-size: 12px;
+  line-height: 18px; }
+
+.quote {
+  display: inline-block;
+  font-family: "Copernicus-Semibold";
+  font-size: 18px;
+  line-height: 30px;
+  position: relative;
+  margin-bottom: 50px; }
+
+.quote .quote-symbol {
+  position: absolute; }
+
+.quote .quote-symbol.left {
+  left: -35px; }
+
+.quote .quote-symbol.right {
+  right: -35px; }
+
+.person {
+  font-weight: 700;
+  text-transform: uppercase; }
+
+.service-list * {
+  color: #009B77; }
+
+.service-list ul {
+  list-style-type: disc; }
+
+.service-list ul li {
+  display: list-item;
+  margin-left: 15px; }
