--- a/statamic/_themes/main/partials/property_tile_agent.html
+++ b/statamic/_themes/main/partials/property_tile_agent.html
@@ -4,9 +4,9 @@
 <div class="agent-properties background-gray">
 <h1>Current Listings</h1>
 {{ if total_results == 1}}
-<div class="property_tile property_tile_1 agent_tile">
+<div class="carousel_tile carousel_tile_1 main_tile">
 {{ else }}
-<div class="property_tile property_tile_2 agent_tile">
+<div class="carousel_tile carousel_tile_2 main_tile">
 {{ endif }}
 {{ endif }}
 <div>
