--- a/src/scss/components/_agent_individual.scss
+++ b/src/scss/components/_agent_individual.scss
@@ -82,15 +82,9 @@
 				@include clearfix;
 			}
 			.press-item {
-				@include gallery(1 of 2);
-				@include clearfix;
-				p {
-					padding-top: gutter(2);
-					padding-bottom: gutter(2);
-					display: block;
-					@include clearfix;		
-					margin-bottom: 0;			
-				}
+				display: block;
+				margin: 0;
+				background-color: #fff;
 				&:first-of-type {
 					border-right: 1px solid $text-green;
 				}
