--- a/src/scss/components/_green_specs.scss
+++ b/src/scss/components/_green_specs.scss
@@ -3,11 +3,23 @@
 		background-color: $lightest-green;
 		@include span(full no-gutter);
 		@include clearfix;
+
 		h4 {
 			margin-top: 0;
 		}
 		* {
 			color: $text-green;
+		}
+		.title {
+			display: flex;
+			align-items: center;
+			margin-bottom: 20px;
+			h3, svg {
+				display: inline-block;
+			}
+			h3 {
+				margin: 0;
+			}
 		}
 		li {
 			display: block;
@@ -30,11 +42,7 @@
 			width: 25px;
 			margin-right: 10px;
 		}
-		h3 {
-			
+		h3 {	
 			margin-top: 0;
-			vertical-align: top;
-			// font-size: 16px;
 		}
-
 	}
