--- a/statamic/_themes/main/partials/property_tile.html
+++ b/statamic/_themes/main/partials/property_tile.html
@@ -2,11 +2,11 @@
 {{ else }}
 {{ if first }}
 {{ if total_results == 1}}
-<div class="property_tile property_tile_1">
+<div class="carousel_tile carousel_tile_1">
 {{ elseif total_results ==2 }}
-<div class="property_tile property_tile_2">
+<div class="carousel_tile carousel_tile_2">
 {{ else }}
-<div class="property_tile property_tile_3">
+<div class="carousel_tile carousel_tile_3">
 {{ endif }}
 {{ endif }}
 <div>
