--- a/statamic/_themes/main/templates/agent_individual.html
+++ b/statamic/_themes/main/templates/agent_individual.html
@@ -20,8 +20,12 @@
 			<div class="green-specs">
 				<h4>PRESS</h4>
 				<div class="press">
-				{{ 	press }}
-				 <a target="_blank" href="{{ link }}" class="press-item">
+				
+				{{ if press|length > 1 }}
+				<div class="carousel_tile carousel_tile_2 main_tile">
+				{{ press }}
+				<div>
+				 <a target="_blank" href="{{ link }}" class="carousel-tile press-item">
 				 	{{ if image|not_empty }}
 				 	<img src="{{ path src="{{ image }}" }}">
 				 	{{ endif }}
@@ -29,12 +33,35 @@
 				 	<p>{{ text }}</p>
 				 	{{ endif }}
 				 </a>
-				{{ /press }}
+				 </div>
+				 {{ /press }}
+				</div>
+				{{ else }}
+
+				<div class="carousel_tile carousel_tile_1 main_tile">
+				{{ press }}
+				<div>
+				 <a target="_blank" href="{{ link }}" class="carousel-tile press-item">
+				 	{{ if image|not_empty }}
+				 	<img src="{{ path src="{{ image }}" }}">
+				 	{{ endif }}
+				 	{{ if text|not_empty }}
+				 	<p>{{ text }}</p>
+				 	{{ endif }}
+				 </a>
+				 </div>
+				 {{ /press }}
+				</div>
+				{{ endif }}
+				
 				</div>
 			</div>
 			{{ endif }}
+
+
+
 				
-			{{ entries:listing folder="properties/*" conditions="agents:{url}" }}
+			{{ entries:listing folder="properties/sale|properties/lease" conditions="agents:{url}" }}
 				{{ theme:partial src="property_tile_agent" use_context="true" }}  
 			{{ /entries:listing }}
 			
