--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -33,6 +33,7 @@
 @import 'components/_agent_individual.scss';
 @import 'components/_green_specs.scss';
 @import 'components/_slick_overides.scss';
+@import 'components/_by_the_numbers.scss';
 
 // modules
 @import 'modules/_hero.scss';
