--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -5341,26 +5341,37 @@ section.services h3 {
 
 .agent-individual main .recent-transactions li {
   box-sizing: border-box;
-  width: 50%;
+  width: 25%;
   float: left;
-  padding-left: 5%;
-  padding-right: 5%;
+  padding-left: 2.5%;
+  padding-right: 2.5%;
   padding: 20px 0;
   font-family: "Copernicus-Medium";
-  font-size: 16px; }
+  font-size: 16px;
+  text-align: left; }
 
-.agent-individual main .recent-transactions li:nth-child(2n + 1) {
+.agent-individual main .recent-transactions li:nth-child(4n + 1) {
   margin-left: 0;
   margin-right: -100%;
   clear: both; }
 
-.agent-individual main .recent-transactions li:nth-child(2n + 2) {
+.agent-individual main .recent-transactions li:nth-child(4n + 2) {
+  margin-left: 25%;
+  margin-right: -100%;
+  clear: none; }
+
+.agent-individual main .recent-transactions li:nth-child(4n + 3) {
   margin-left: 50%;
   margin-right: -100%;
   clear: none; }
 
-.agent-individual main .recent-transactions li:nth-child(2n + 2) {
-  text-align: right; }
+.agent-individual main .recent-transactions li:nth-child(4n + 4) {
+  margin-left: 75%;
+  margin-right: -100%;
+  clear: none; }
+
+.agent-individual main .recent-transactions li.transaction-details {
+  font-size: 14px; }
 
 .green-specs {
   padding: 30px;
