--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -59,3 +59,15 @@ p {
 	font-size: 16px;
 	line-height: 26px;
 }
+
+.large-body {
+    h3 {
+        margin-top: 0;
+        margin-bottom: 60px;
+    }
+    p {
+        font-size: 25px;
+        line-height: 40px;
+        margin-top: 0;
+    }
+}
