--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -64,6 +64,7 @@ p {
     h3 {
         margin-top: 0;
         margin-bottom: 60px;
+        display: block;
     }
     p {
         font-size: 25px;
