--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -60,7 +60,7 @@ p {
 	line-height: 26px;
 }
 
-.large-body {
+.container.large-body {
     h3 {
         margin-top: 0;
         margin-bottom: 60px;
