--- a/src/scss/components/_maps.scss
+++ b/src/scss/components/_maps.scss
@@ -1,6 +1,6 @@
 #map-canvas {
 	width: 100%;
-	height: 100%;	
+	height: 100%;
 	#content {
 		img {
 			height: 220px;
@@ -12,4 +12,5 @@
 .neighborhood #map {
 	width: 100%;
 	height: 800px;
+	margin-top: 60px;
 }
