--- a/src/scss/components/_agent_individual.scss
+++ b/src/scss/components/_agent_individual.scss
@@ -91,8 +91,11 @@
 				&:hover {
 					// background-color: darken($lightest-green, 3%);
 				}
-				p {
+				p, img {
 					text-align: center;
+				}
+				p {
+					font-size: 14px;
 				}
 			}
 		}
@@ -120,6 +123,7 @@
 			li {
 				@include gallery(1 of 4);
 				padding: 20px 0;
+				padding-right: 5px;
 				font-family: $header-font-medium;
 				font-size: 16px;
 				text-align: left;
