--- a/statamic/_themes/main/templates/neighborhood.html
+++ b/statamic/_themes/main/templates/neighborhood.html
@@ -1,7 +1,6 @@
-	<section class="hero small leading" style="background-image: url( {{ path src="{{ hero_image }}" }} );">
+	<section class="hero small leading dark" style="background-image: url( {{ path src="{{ hero_image }}" }} );">
 		<h1>{{ tag_line }}</h1>
 		<h3>{{ sub_tag_line}}</h3>
-		<div class="mask"></div>
 	</section>
 <section class="background-gray">
 <div class="container">
