--- a/src/scss/modules/_hero.scss
+++ b/src/scss/modules/_hero.scss
@@ -20,6 +20,11 @@
 	&.small {
 		height: 450px;
 	}
+	&.dark {
+		h1, h3 {
+			color: $dark-gray;
+		}
+	}
 	width: 100%;
 	background-position: center;
   background-size: cover;
