--- a/statamic/_themes/main/templates/property_lease.html
+++ b/statamic/_themes/main/templates/property_lease.html
@@ -1,4 +1,4 @@
-<section class="leading properties property-page background-gray">
+<section class="leading property-page background-gray">
 	<div class="container">
 
 		<aside>
@@ -172,6 +172,10 @@
 							<li>{{ price }}/month</li>
 							{{ endif }}
 
+							{{ if terms|not_empty }}
+							<li>{{ terms }}</li>
+							{{ endif }}
+
 							{{ if plot|not_empty }}
 							<li>{{ plot }}</li>
 							{{ endif }}
@@ -205,7 +209,7 @@
 							{{ endif }}
 
 							{{ if pet_policy|not_empty }}
-							<li>${{ pet_policy|format_number }}</li>
+							<li>{{ pet_policy }}</li>
 							{{ endif }}
 
 							{{ if furnished|not_empty }}
@@ -244,7 +248,9 @@
 				<div class="summary">
 					{{ summary_intro }}
 					<div id="summary_expanded" style="display: none">{{ summary_full }}</div>
+					{{ if summary_full }}
 					<a id="summary_expander" href=""><i id="summary_icon" class="fa fa-plus-circle"></i><span class="read-more">Read More</span></a>
+					{{ endif }}
 				</div>
 				{{ endif }}
 			</div>
